test: refactor tests and add missing configuration in body http handlers test